# rsm

./: .gitattributes  .gitignore  .rs  Cargo.toml  LICENSE  data.json  readme.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: rsm.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: lib.rs  main.rs
src/handler/: handler.rs  mod.rs
src/handler/image_handler/: image_handler.rs
src/handler/image_handler/handlers/png/: chunk_types.rs  png_handler.rs  png_image_data.rs
src/lib/img/: mod.rs
src/lib/img/png/: mod.rs
src/lib/img/png/chunk/: png_chunk.rs  png_chunk_type.rs
src/lib/img/png/image/: png_image.rs
src/lib/img/png/img/: image.rs  png_data.rs  png_image.rs
src/lib/img/png/parse/: parse.rs  png_parse.rs  png_parser.rs
src/lib/img/png/read/: png_read.rs  read.rs
src/lib/img/png/reader/: png_reader.rs
src/lib/util/: mod.rs  rsm_error.rs
src/lib/util/data/: file_data.rs
src/lib/util/err/: error.rs  rsm_error.rs
src/lib/util/files/: file_data.rs
src/rsm/color/: color.rs
src/rsm/color/colors/: rgb.rs  rgba.rs
src/rsm/img/png/chunk/: chunk.rs
src/rsm/img/png/handler/: png_handler.rs
src/rsm/img/png/image/: png_image.rs
src/rsm/img/png/reader/: parse.rs  png_reader.rs  read.rs  read_chunks.rs  (+1 more)
src/rsm_lib/color/: color.rs
src/rsm_lib/color/colors/: rgb.rs  rgba.rs
src/rsm_lib/util/: reporter.rs
src/rsm_lib/util/reports/: reporter.rs
tests/: main.rs
tests/png/: basi.rs  basic.rs  mod.rs  png_suite.rs  r_suite.rs  readme.md  test_image.rs  test_png_suite.rs  x.rs
tests/png/tests/: mod.rs  png_suite.rs
(+85 files in other folders)
